--- a/src/MainPanel.form
+++ b/src/MainPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="52" y="29" width="647" height="642"/>
@@ -222,6 +222,31 @@
           <text value="Save Person"/>
         </properties>
       </component>
+      <component id="d9977" class="javax.swing.JList" binding="UsersList">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="50" height="150"/>
+          </grid>
+        </constraints>
+        <properties>
+          <layoutOrientation value="2"/>
+          <model/>
+        </properties>
+      </component>
+      <component id="f08b1" class="javax.swing.JButton" binding="PasswordBtn" default-binding="true">
+        <constraints>
+          <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Create Password"/>
+        </properties>
+      </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="buttonGroup1">
+      <member id="3005c"/>
+      <member id="62c26"/>
+    </group>
+  </buttonGroups>
 </form>
